--- a/MovieMania/Views/Shared/_Layout.cshtml
+++ b/MovieMania/Views/Shared/_Layout.cshtml
@@ -1,17 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="header">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MovieMania</title>
+    <title>@ViewData["Title"] - Movie Mania</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MovieMania</a>
+                <a class="navbar-brand" id="navBarFont" asp-area="" asp-controller="Home" asp-action="Index">Movie Mania</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
                             </li>
                         -->
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="CatalogIndex">Catalog</a>
+                            <a class="nav-link text-white btn-white" asp-area="" asp-controller="Catalog" asp-action="CatalogIndex">Catalog</a>
                         </li>
                     </ul>
                 </div>
