--- a/MovieMania/Views/Home/Index.cshtml
+++ b/MovieMania/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page"; 
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<body id="backgroundImage">
+    <div class="text-center" id="headText">
+        <h1 class="display-4">Movie Mania</h1>
+    </div>
+</body>
