--- a/MovieMania/Views/Catalog/Delete.cshtml
+++ b/MovieMania/Views/Catalog/Delete.cshtml
@@ -22,7 +22,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <a asp-controller="Catalog" asp-route-Id="@ViewBag.Film.FilmId" asp-action="Delete" class="btn btn-danger">Delete</a>
+                            <a asp-controller="Catalog" asp-route-Id="@ViewBag.Film.FilmId" asp-action="DeleteFilm" class="btn btn-danger">Delete</a>
                         </div>
                         <div class="col">
                             <a asp-action="CatalogIndex" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i>Back</a>
