--- a/MovieMania/Views/Home/Index.cshtml
+++ b/MovieMania/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 <body id="backgroundImage">
     <div class="text-center" id="headText">
         <h1 class="display-4">Movie Mania</h1>
+        <h2>Some Description...</h2>
     </div>
 </body>
