--- a/MovieMania/Views/Catalog/Delete.cshtml
+++ b/MovieMania/Views/Catalog/Delete.cshtml
@@ -2,39 +2,12 @@
 
 <form method="post" asp-action="DeleteFilm">
     <input asp-for="FilmId" hidden />
-    <div class="border p-3">
-
-        <div class="form-group row">
-            <h2 class="text-info pl-3">Delete Movie</h2>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="@ViewBag.Film.ImageUrl" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">@ViewBag.Film.Title</h5>
-                        <p class="card-text">@ViewBag.Film.Description</p>
-                        <a href="@ViewBag.Film.TrailerUrl" class="btn btn-primary">Trailer</a>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-8 offset-4 row">
-
-                        <div class="col">
-                            <a asp-controller="Catalog" asp-route-Id="@ViewBag.Film.FilmId" asp-action="DeleteFilm" class="btn btn-danger">Delete</a>
-                        </div>
-                        <div class="col">
-                            <a asp-action="CatalogIndex" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i>Back</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4">
-                @* Keep this empty *@
-            </div>
-        </div>
+    <h1 class="text-center">Are you sure that you want to delete "@ViewBag.Film.Title"?</h1>
+    <div class="col text-center">
+        <a asp-controller="Catalog" asp-route-Id="@ViewBag.Film.FilmId" asp-action="DeleteFilm" class="btn btn-danger">Yes, I am sure!</a>
+        <a asp-action="CatalogIndex" class="btn btn-primary"><i class="fas fa-sign-out-alt"></i>No, bring me back!</a>
     </div>
+    
 
 </form>
 
