--- a/MovieMania/Views/Catalog/Edit.cshtml
+++ b/MovieMania/Views/Catalog/Edit.cshtml
@@ -1,21 +1,20 @@
 ﻿@model MovieMania.Models.Film
 
-<form method="post" asp-action="EditFilm" runat="server">
+<form method="post">
+    <input asp-for="FilmId" hidden />
     <div class="border p-3">
 
         <div class="form-group row">
-            <h2 class="text-info pl-3">Edit Movie</h2>
+            <h2 class="text-info pl-3">Edit Film</h2>
         </div>
-
         <div class="row">
             <div class="col-8">
-
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Title"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Title" class="form-control" id="title" name="title" type="text"/>
+                        <input asp-for="Title" class="form-control" />
                         <span asp-validation-for="Title" class="text-danger"></span>
                     </div>
                 </div>
@@ -25,7 +24,7 @@
                         <label asp-for="Description"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Description" class="form-control" id="description" name="description" type="text"/>
+                        <input asp-for="Description" class="form-control" />
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                 </div>
@@ -35,27 +34,27 @@
                         <label asp-for="Genre"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Genre" class="form-control" id="genre" name="genre" type="text"/>
+                        <input asp-for="Genre" class="form-control" />
                         <span asp-validation-for="Genre" class="text-danger"></span>
                     </div>
                 </div>
-                
+
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Rating"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Rating" class="form-control" id="rating" name="rating" type="number"/>
+                        <input asp-for="Rating" class="form-control" />
                         <span asp-validation-for="Rating" class="text-danger"></span>
                     </div>
                 </div>
-        
+
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="ImageUrl"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="ImageUrl" class="form-control" id="imageURL" name="imageURL" type="url"/>
+                        <input asp-for="ImageUrl" class="form-control" />
                         <span asp-validation-for="ImageUrl" class="text-danger"></span>
                     </div>
                 </div>
@@ -65,7 +64,7 @@
                         <label asp-for="TrailerUrl"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="TrailerUrl" class="form-control" id="trailerURL" name="trailerURL" type="url"/>
+                        <input asp-for="TrailerUrl" class="form-control" />
                         <span asp-validation-for="TrailerUrl" class="text-danger"></span>
                     </div>
                 </div>
@@ -74,13 +73,11 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <a asp-controller="Catalog" asp-route-Id="@ViewBag.Film.FilmId" asp-action="EditFilm" class="btn btn-warning w-100">Edit</a>
+                            <input type="submit" class="btn btn-info w-100" value="Update" />
                         </div>
-
                         <div class="col">
-                            <a asp-action="CatalogIndex" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i>Back</a>
+                            <a asp-action="CatalogIndex" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i> Back</a>
                         </div>
-
                     </div>
                 </div>
             </div>
