--- a/MovieMania/Views/Catalog/CatalogIndex.cshtml
+++ b/MovieMania/Views/Catalog/CatalogIndex.cshtml
@@ -24,6 +24,12 @@
         <div class="col">
             <h2 class="text-primary">Films</h2>
         </div>
+        <div class="col">
+            <form class="form-inline my-2 my-lg-0" method="post" asp-action="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
         <div class="col text-right">
             <a asp-controller="Catalog" asp-action="Add" class="btn btn-primary">
                 Add New Movie
