--- a/MovieMania/Views/Catalog/Film.cshtml
+++ b/MovieMania/Views/Catalog/Film.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="card" style="width: 50%;">
+﻿<div class="card" style="width: 15rem;">
     <img src="@ViewBag.Film.ImageUrl" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title text-center">"@ViewBag.Film.Title" - @ViewBag.Film.Genre</h5>
