--- a/MovieMania/wwwroot/css/site.css
+++ b/MovieMania/wwwroot/css/site.css
@@ -84,7 +84,7 @@ body {
 #navBarFont {
     color: #fff;
     font-family: Brush Script MT;
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 #colorIconCatalog {
