--- a/MovieMania/Views/Catalog/Edit.cshtml
+++ b/MovieMania/Views/Catalog/Edit.cshtml
@@ -73,7 +73,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <input type="submit" class="btn btn-info w-100" value="Update" />
+                            <input type="submit" class="btn btn-info w-100" value="Edit" />
                         </div>
                         <div class="col">
                             <a asp-action="CatalogIndex" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i> Back</a>
