--- a/MovieMania/Views/Catalog/Add.cshtml
+++ b/MovieMania/Views/Catalog/Add.cshtml
@@ -1,4 +1,7 @@
 ﻿@model MovieMania.Models.Film
+@{
+    ViewData["Title"] = "Add Film";
+}
 
 <form method="post" asp-action="Add">
     <div class="border p-3">
