--- a/MovieMania/Views/Catalog/Edit.cshtml
+++ b/MovieMania/Views/Catalog/Edit.cshtml
@@ -1,4 +1,7 @@
 ﻿@model MovieMania.Models.Film
+@{
+    ViewData["Title"] = "Edit Film";
+}
 
 <form method="post">
     <input asp-for="FilmId" hidden />
